--- a/admin/package.json
+++ b/admin/package.json
@@ -8,6 +8,7 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "axios": "^1.6.8",
     "bootstrap": "^5.3.3",
     "jquery": "^3.7.1",
     "node": "^20.5.0",
@@ -19,6 +20,7 @@
     "react-helmet": "^6.1.0",
     "react-router-dom": "^6.22.3",
     "react-scripts": "5.0.1",
+    "sweetalert2": "^11.10.8",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
