--- a/admin/package.json
+++ b/admin/package.json
@@ -16,6 +16,7 @@
     "node-sass": "^7.0.3",
     "npm": "^10.5.2",
     "react": "^18.2.0",
+    "react-bootstrap": "^2.10.2",
     "react-dom": "^18.2.0",
     "react-helmet": "^6.1.0",
     "react-router-dom": "^6.22.3",
