--- a/admin/package.json
+++ b/admin/package.json
@@ -19,6 +19,7 @@
     "react-bootstrap": "^2.10.2",
     "react-dom": "^18.2.0",
     "react-helmet": "^6.1.0",
+    "react-js-pagination": "^3.0.3",
     "react-router-dom": "^6.22.3",
     "react-scripts": "5.0.1",
     "sweetalert2": "^11.10.8",
