--- a/admin/package.json
+++ b/admin/package.json
@@ -5,11 +5,15 @@
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^6.5.2",
     "@fortawesome/react-fontawesome": "^0.2.0",
+    "@headlessui/react": "^1.7.19",
+    "@heroicons/react": "^2.1.3",
+    "@reduxjs/toolkit": "^2.2.3",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.6.8",
     "bootstrap": "^5.3.3",
+    "framer-motion": "^11.1.7",
     "jquery": "^3.7.1",
     "node": "^20.5.0",
     "node-gyp": "^8.4.1",
@@ -20,8 +24,10 @@
     "react-dom": "^18.2.0",
     "react-helmet": "^6.1.0",
     "react-js-pagination": "^3.0.3",
+    "react-redux": "^9.1.2",
     "react-router-dom": "^6.22.3",
     "react-scripts": "5.0.1",
+    "react-toastify": "^10.0.5",
     "sweetalert2": "^11.10.8",
     "web-vitals": "^2.1.4"
   },
@@ -50,6 +56,7 @@
     ]
   },
   "devDependencies": {
-    "sass": "^1.75.0"
+    "sass": "^1.75.0",
+    "tailwindcss": "^3.4.3"
   }
 }
