--- a/admin/package.json
+++ b/admin/package.json
@@ -27,6 +27,7 @@
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.22.3",
     "react-scripts": "5.0.1",
+    "react-scrollable-feed": "^2.0.1",
     "react-toastify": "^10.0.5",
     "sweetalert2": "^11.10.8",
     "web-vitals": "^2.1.4"
