--- a/admin/package.json
+++ b/admin/package.json
@@ -91,6 +91,7 @@
     ]
   },
   "devDependencies": {
+    "@babel/plugin-transform-private-property-in-object": "^7.24.6",
     "electron": "^30.0.6",
     "electron-builder": "^24.13.3",
     "sass": "^1.75.0",
